--- a/express/.gitignore
+++ b/express/.gitignore
@@ -1,27 +1,29 @@
-# Dependencies
-/node_modules
-/dist
+# dev
+.yarn/
+!.yarn/releases
+.vscode/*
+!.vscode/launch.json
+!.vscode/*.code-snippets
+.idea/workspace.xml
+.idea/usage.statistics.xml
+.idea/shelf
 
-# Environment variables
+# deps
+node_modules/
+
+# env
 .env
-.env.local
-.env.development
-.env.test
 .env.production
 
-# Logs
-logs
+# logs
+logs/
 *.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
+lerna-debug.log*
 
-# Editor directories and files
-.idea
-.vscode
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw?
+# misc
+.DS_Store
+.vercel
