--- a/express/package.json
+++ b/express/package.json
@@ -1,30 +1,12 @@
 {
-  "name": "express-auth-server",
-  "version": "1.0.0",
-  "description": "Express authentication server with TypeScript",
-  "main": "dist/index.js",
-  "scripts": {
-    "build": "tsc --pretty",
-    "build:clean": "rimraf dist && tsc --pretty",
-    "start": "node dist/index.js",
-    "dev": "tsx watch --clear-screen=false src src/index.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": ["express", "typescript", "authentication"],
-  "author": "",
-  "license": "ISC",
+  "name": "express",
+  "type": "module",
   "dependencies": {
-    "express": "^4.18.2",
-    "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
-    "helmet": "^7.0.0"
+    "express": "5.1.0"
   },
   "devDependencies": {
-    "@types/cors": "^2.8.15",
-    "@types/express": "^4.17.20",
-    "@types/node": "^20.8.6",
-    "rimraf": "^5.0.5",
-    "tsx": "^4.7.0",
-    "typescript": "^5.2.2"
+    "@types/node": "20.11.17",
+    "@types/express": "5.0.0",
+    "typescript": "5.8.3"
   }
 }
