--- a/express/tsconfig.json
+++ b/express/tsconfig.json
@@ -1,25 +1,8 @@
 {
   "compilerOptions": {
-    "target": "es2022",
-    "module": "commonjs",
-    "outDir": "./dist",
-    "rootDir": "./src",
-    "strict": true,
-    "esModuleInterop": true,
-    "forceConsistentCasingInFileNames": true,
+    "target": "ESNext",
+    "module": "NodeNext",
     "skipLibCheck": true,
-    "resolveJsonModule": true,
-    
-    /* Make output more readable */
-    "pretty": true,
-    "removeComments": false,
-    "sourceMap": true,
-    "declaration": true,
-    "declarationMap": true,
-    "preserveConstEnums": true,
-    "newLine": "lf",
-    "noEmitOnError": true
   },
-  "include": ["src/**/*.ts"],
   "exclude": ["node_modules"]
 }
