--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "concurrently \"pnpm run dev:hono\" \"pnpm run dev:express\" \"pnpm run dev:next\"",
-    "dev:hono": "cd hono && vercel dev --listen 3002",
-    "dev:express": "cd express && vercel dev --listen 3001",
+    "dev:hono": "VERCEL_ORG_ID=team_dLs0K8v8Di4l8uB7knw5aXbL VERCEL_PROJECT_ID=prj_o5EfcP1dF709ADAUK3AMu0U40yhX vercel dev --listen 3002",
+    "dev:express": "VERCEL_ORG_ID=team_dLs0K8v8Di4l8uB7knw5aXbL VERCEL_PROJECT_ID=prj_mh0YRbZId4WavdpFknlpAbDvJmhu vercel dev --listen 3001",
     "dev:next": "cd nextjs && pnpm run dev",
     "postinstall": "cd hono && pnpm install && cd ../express && pnpm install && cd ../nextjs && pnpm install"
   },
