remove prject id from package.json

--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,9 @@ POSTGRES_DB=postgres
 POSTGRES_HOST=localhost
 POSTGRES_PORT=5432
 POSTGRES_URL=postgresql://postgres:postgres@localhost:5432/postgres
+
+
+HONO_VERCEL_ORG_ID=string
+HONO_VERCEL_PROJECT_ID=string
+EXPRESS_VERCEL_ORG_ID=string
+EXPRESS_VERCEL_PROJECT_ID=string
