--- a/nextjs/package.json
+++ b/nextjs/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build --turbopack",
-    "start": "drizzle-kit migrate && next start"
+    "start": "next start",
+    "migrate": "drizzle-kit migrate"
   },
   "dependencies": {
     "better-auth": "^1.3.16",
