back to basic settings

--- a/nextjs/.env.example
+++ b/nextjs/.env.example
@@ -1,4 +1,12 @@
+# Basic connection string
 POSTGRES_URL=postgresql://postgres:postgres@localhost:5432/postgres
+
+# Connection string with default schema
+# Option 1: Using options
+POSTGRES_URL_WITH_SCHEMA=postgresql://postgres:postgres@localhost:5432/postgres?options=--search_path%3Dyour_schema
+
+# Option 2: Using search_path directly (PostgreSQL 9.2+)
+# POSTGRES_URL_WITH_SCHEMA=postgresql://postgres:postgres@localhost:5432/postgres?search_path=your_schema
 
 NEXT_PUBLIC_HONO_SERVER=http://localhost:3001
 NEXT_PUBLIC_EXPRESS_SERVER=http://localhost:3002
