setup hono and express db

--- a/express/package.json
+++ b/express/package.json
@@ -2,11 +2,12 @@
   "name": "express",
   "type": "module",
   "dependencies": {
-    "express": "5.1.0"
+    "express": "5.1.0",
+    "nodemailer": "^7.0.6"
   },
   "devDependencies": {
-    "@types/node": "20.11.17",
     "@types/express": "5.0.0",
+    "@types/node": "20.11.17",
     "typescript": "5.8.3"
   }
 }
