--- a/hono/package.json
+++ b/hono/package.json
@@ -3,7 +3,8 @@
   "type": "module",
   "dependencies": {
     "@hono/node-server": "^1.19.4",
-    "hono": "^4.9.8"
+    "hono": "^4.9.8",
+    "nodemailer": "^7.0.6"
   },
   "devDependencies": {
     "@types/node": "^20.11.17",
