--- a/nextjs/package.json
+++ b/nextjs/package.json
@@ -12,6 +12,7 @@
     "better-auth": "^1.3.16",
     "drizzle-orm": "^0.44.5",
     "next": "15.5.4",
+    "nodemailer": "^7.0.6",
     "pg": "^8.16.3",
     "react": "19.1.0",
     "react-dom": "19.1.0"
