packages and env vaars

--- a/express/.env.example
+++ b/express/.env.example
@@ -1,2 +1,5 @@
 POSTGRES_URL=postgresql://postgres:postgres@localhost:5432/postgres
 SMTP_PASSWORD=asdf
+
+BETTER_AUTH_SECRET=supersecretkey
+BETTER_AUTH_URL=http://localhost:3002
