--- a/nextjs/.env.example
+++ b/nextjs/.env.example
@@ -3,3 +3,8 @@ POSTGRES_URL=postgresql://postgres:postgres@localhost:5432/postgres
 
 NEXT_PUBLIC_HONO_SERVER=http://localhost:3001
 NEXT_PUBLIC_EXPRESS_SERVER=http://localhost:3002
+
+SMTP_PASSWORD=ssshhhh
+
+BETTER_AUTH_SECRET=supersecretkey
+BETTER_AUTH_URL=http://localhost:3000
