--- a/express/package.json
+++ b/express/package.json
@@ -2,12 +2,18 @@
   "name": "express",
   "type": "module",
   "dependencies": {
+    "better-auth": "^1.3.17",
+    "drizzle-orm": "^0.44.5",
     "express": "5.1.0",
-    "nodemailer": "^7.0.6"
+    "nodemailer": "^7.0.6",
+    "pg": "^8.16.3"
   },
   "devDependencies": {
     "@types/express": "5.0.0",
     "@types/node": "20.11.17",
+    "@types/pg": "^8.15.5",
+    "drizzle-kit": "^0.31.4",
+    "tsx": "^4.20.5",
     "typescript": "5.8.3"
   }
 }
