--- a/hono/package.json
+++ b/hono/package.json
@@ -3,12 +3,17 @@
   "type": "module",
   "dependencies": {
     "@hono/node-server": "^1.19.4",
+    "better-auth": "^1.3.17",
+    "drizzle-orm": "^0.44.5",
     "hono": "^4.9.8",
-    "nodemailer": "^7.0.6"
+    "nodemailer": "^7.0.6",
+    "pg": "^8.16.3"
   },
   "devDependencies": {
     "@types/node": "^20.11.17",
-    "tsx": "^4.7.1",
+    "@types/pg": "^8.15.5",
+    "drizzle-kit": "^0.31.4",
+    "tsx": "^4.20.5",
     "typescript": "^5.8.3"
   }
 }
