aadd mailer lib

--- a/express/.env.example
+++ b/express/.env.example
@@ -1,5 +1,9 @@
 POSTGRES_URL=postgresql://postgres:postgres@localhost:5432/postgres
-SMTP_PASSWORD=asdf
+
+SMTP_HOST=smtp.ethereal.email
+SMTP_USER=your_ethereal_username
+SMTP_PASSWORD=ssshhhh
+SMTP_FROM=your_ethereal_email
 
 BETTER_AUTH_SECRET=supersecretkey
 BETTER_AUTH_URL=http://localhost:3002
