--- a/nextjs/.env.example
+++ b/nextjs/.env.example
@@ -4,7 +4,10 @@ POSTGRES_URL=postgresql://postgres:postgres@localhost:5432/postgres
 NEXT_PUBLIC_HONO_SERVER=http://localhost:3001
 NEXT_PUBLIC_EXPRESS_SERVER=http://localhost:3002
 
+SMTP_HOST=smtp.ethereal.email
+SMTP_USER=your_ethereal_username
 SMTP_PASSWORD=ssshhhh
+SMTP_FROM=your_ethereal_email
 
 BETTER_AUTH_SECRET=supersecretkey
 BETTER_AUTH_URL=http://localhost:3000
