--- a/nextjs/package.json
+++ b/nextjs/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "better-auth": "^1.3.16",
+    "dotenv": "^17.2.2",
     "drizzle-orm": "^0.44.5",
     "next": "15.5.4",
     "nodemailer": "^7.0.6",
