--- a/hono/package.json
+++ b/hono/package.json
@@ -4,6 +4,7 @@
   "dependencies": {
     "@hono/node-server": "^1.19.4",
     "better-auth": "^1.3.17",
+    "dotenv": "^17.2.2",
     "drizzle-orm": "^0.44.5",
     "hono": "^4.9.8",
     "nodemailer": "^7.0.6",
