--- a/hono/package.json
+++ b/hono/package.json
@@ -1,6 +1,9 @@
 {
   "name": "hono",
   "type": "module",
+  "scripts": {
+    "migrate": "drizzle-kit migrate"
+  },
   "dependencies": {
     "@hono/node-server": "^1.19.4",
     "better-auth": "^1.3.17",
