--- a/express/package.json
+++ b/express/package.json
@@ -1,8 +1,12 @@
 {
   "name": "express",
   "type": "module",
+  "scripts": {
+    "migrate": "drizzle-kit migrate"
+  },
   "dependencies": {
     "better-auth": "^1.3.17",
+    "dotenv": "^17.2.2",
     "drizzle-orm": "^0.44.5",
     "express": "5.1.0",
     "nodemailer": "^7.0.6",
