change env vars on workflow for express

--- a/.github/workflows/express-db-migrate.yaml
+++ b/.github/workflows/express-db-migrate.yaml
@@ -45,7 +45,7 @@ jobs:
         working-directory: ./express
         run: pnpm migrate
         env:
-          POSTGRES_URL: ${{ secrets.HONO_POSTGRES_URL }}
+          POSTGRES_URL: ${{ secrets.EXPRESS_POSTGRES_URL }}
       
       - name: Output migration status
         working-directory: ./express
