--- a/nextjs/package.json
+++ b/nextjs/package.json
@@ -6,7 +6,9 @@
     "dev": "next dev --turbopack",
     "build": "next build --turbopack",
     "start": "next start",
-    "migrate": "drizzle-kit migrate"
+    "migrate": "drizzle-kit migrate",
+    "generate": "drizzle-kit generate",
+    "generate-auth": "npx @better-auth/cli generate --output ./db/schema/auth.ts"
   },
   "dependencies": {
     "better-auth": "^1.3.16",
