--- a/express/package.json
+++ b/express/package.json
@@ -2,10 +2,13 @@
   "name": "express",
   "type": "module",
   "scripts": {
-    "migrate": "drizzle-kit migrate"
+    "migrate": "drizzle-kit migrate",
+    "generate": "drizzle-kit generate",
+    "generate-auth": "npx @better-auth/cli generate --output ./src/lib/db/schema/auth.ts"
   },
   "dependencies": {
     "better-auth": "^1.3.17",
+    "cors": "^2.8.5",
     "dotenv": "^17.2.2",
     "drizzle-orm": "^0.44.5",
     "express": "5.1.0",
