--- a/express/package.json
+++ b/express/package.json
@@ -16,6 +16,7 @@
     "pg": "^8.16.3"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.19",
     "@types/express": "5.0.0",
     "@types/node": "20.11.17",
     "@types/pg": "^8.15.5",
