--- a/hono/.env.example
+++ b/hono/.env.example
@@ -7,3 +7,5 @@ SMTP_FROM=your_ethereal_email
 
 BETTER_AUTH_SECRET=supersecretkey
 BETTER_AUTH_URL=http://localhost:3001
+
+CORS_ORIGINS=http://localhost:3000
