--- a/hono/package.json
+++ b/hono/package.json
@@ -17,6 +17,7 @@
   },
   "devDependencies": {
     "@types/node": "^20.11.17",
+    "@types/nodemailer": "^7.0.1",
     "@types/pg": "^8.15.5",
     "drizzle-kit": "^0.31.4",
     "tsx": "^4.20.5",
