--- a/nextjs/package.json
+++ b/nextjs/package.json
@@ -18,7 +18,8 @@
     "nodemailer": "^7.0.6",
     "pg": "^8.16.3",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "swr": "^2.3.6"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
