--- a/hono/.env.example
+++ b/hono/.env.example
@@ -9,3 +9,6 @@ BETTER_AUTH_SECRET=supersecretkey
 BETTER_AUTH_URL=http://localhost:3001
 
 CORS_ORIGINS=http://localhost:3000
+
+GITHUB_CLIENT_ID=asdf
+GITHUB_CLIENT_SECRET=asdf
