--- a/hono/tsconfig.json
+++ b/hono/tsconfig.json
@@ -7,7 +7,7 @@
     "types": ["node"],
     "jsx": "react-jsx",
     "jsxImportSource": "hono/jsx",
-    "outDir": "./dist"
+    "outDir": "./dist",
   },
   "exclude": ["node_modules"]
 }
