--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "concurrently \"pnpm run dev:hono\" \"pnpm run dev:express\" \"pnpm run dev:next\"",
-    "dev:hono": ". .env; VERCEL_ORG_ID=$HONO_VERCEL_ORG_ID VERCEL_PROJECT_ID=$HONO_VERCEL_PROJECT_ID vercel dev --listen 3001",
-    "dev:express": ". .env; VERCEL_ORG_ID=$EXPRESS_VERCEL_ORG_ID VERCEL_PROJECT_ID=$EXPRESS_VERCEL_PROJECT_ID vercel dev --listen 3002",
+    "dev": "concurrently -c green,yellow,magenta --names hono,express,next \"pnpm run dev:hono\" \"pnpm run dev:express\" \"pnpm run dev:next\"",
+    "dev:hono:old": ". .env; VERCEL_ORG_ID=$HONO_VERCEL_ORG_ID VERCEL_PROJECT_ID=$HONO_VERCEL_PROJECT_ID vercel dev --listen 3001",
+    "dev:express:old": ". .env; VERCEL_ORG_ID=$EXPRESS_VERCEL_ORG_ID VERCEL_PROJECT_ID=$EXPRESS_VERCEL_PROJECT_ID vercel dev --listen 3002",
+    "dev:hono": "cd hono && pnpm run dev",
+    "dev:express": "cd express && pnpm run dev",
     "dev:next": "cd nextjs && pnpm run dev",
     "postinstall": "cd hono && pnpm install && cd ../express && pnpm install && cd ../nextjs && pnpm install"
   },
