add google sign in

--- a/hono/.env.example
+++ b/hono/.env.example
@@ -12,3 +12,6 @@ CORS_ORIGINS=http://localhost:3000
 
 GITHUB_CLIENT_ID=asdf
 GITHUB_CLIENT_SECRET=asdf
+
+GOOGLE_CLIENT_ID=asddf
+GOOGLE_CLIENT_SECRET=asdf
