--- a/hono/.env.example
+++ b/hono/.env.example
@@ -8,10 +8,12 @@ SMTP_FROM=your_ethereal_email
 BETTER_AUTH_SECRET=supersecretkey
 BETTER_AUTH_URL=http://localhost:3001
 
-CORS_ORIGIN=http://localhost:3000
+CORS_ORIGINS=http://localhost:3000
 
 GITHUB_CLIENT_ID=asdf
 GITHUB_CLIENT_SECRET=asdf
 
 GOOGLE_CLIENT_ID=asddf
 GOOGLE_CLIENT_SECRET=asdf
+
+CROSS_SUBDOMAIN_COOKIE_DOMAIN=localhost
