--- a/express/.env.example
+++ b/express/.env.example
@@ -8,4 +8,6 @@ SMTP_FROM=your_ethereal_email
 BETTER_AUTH_SECRET=supersecretkey
 BETTER_AUTH_URL=http://localhost:3002
 
-CORS_ORIGIN=http://localhost:3000
+CORS_ORIGINS=http://localhost:3000
+
+CROSS_SUBDOMAIN_COOKIE_DOMAIN=localhost
