passkey registration: update env

--- a/hono/.env.example
+++ b/hono/.env.example
@@ -8,6 +8,9 @@ SMTP_FROM=your_ethereal_email
 BETTER_AUTH_SECRET=supersecretkey
 BETTER_AUTH_URL=http://localhost:3001
 
+BETTER_AUTH_PASSKEY_RPID=localhost
+BETTER_AUTH_PASSKEY_ORIGIN=http://localhost:3000
+
 CORS_ORIGINS=http://localhost:3000
 
 GITHUB_CLIENT_ID=asdf
