--- a/.github/workflows/deploy-nextjs.yml
+++ b/.github/workflows/deploy-nextjs.yml
@@ -17,6 +17,8 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: '18'
+      - name: Install pnpm
+        run: npm install -g pnpm@latest
       - run: cd nextjs && pnpm install
       - name: Install Vercel CLI
         run: npm install --global vercel@latest
