--- a/.github/workflows/deploy-express.yml
+++ b/.github/workflows/deploy-express.yml
@@ -8,6 +8,7 @@ on:
   push:
     branches: [ main ]
     paths: [ 'express/**' ]
+  workflow_dispatch: # Allow manual triggering
 
 jobs:
   deploy:
