--- a/.github/workflows/deploy-nextjs.yml
+++ b/.github/workflows/deploy-nextjs.yml
@@ -17,7 +17,7 @@ jobs:
       - uses: actions/checkout@v4
       # - uses: pnpm/action-setup@v4
       #   name: Install pnpm
-      # - name: Install Vercel CLI
+      - name: Install Vercel CLI
         run: npm install --global vercel@latest
       - name: Pull Vercel Environment Information
         run: vercel pull --yes --environment=production --token=${{ secrets.VERCEL_TOKEN }}
