--- a/nextjs/package.json
+++ b/nextjs/package.json
@@ -5,18 +5,11 @@
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build --turbopack",
-    "start": "next start",
-    "migrate": "drizzle-kit migrate",
-    "generate": "drizzle-kit generate",
-    "generate-auth": "npx @better-auth/cli generate --output ./db/schema/auth.ts"
+    "start": "next start"
   },
   "dependencies": {
     "better-auth": "^1.3.16",
-    "dotenv": "^17.2.2",
-    "drizzle-orm": "^0.44.5",
     "next": "15.5.4",
-    "nodemailer": "^7.0.6",
-    "pg": "^8.16.3",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "swr": "^2.3.6"
@@ -25,10 +18,8 @@
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/nodemailer": "^7.0.1",
-    "@types/pg": "^8.15.5",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "drizzle-kit": "^0.31.4",
     "tailwindcss": "^4",
     "tsx": "^4.20.5",
     "typescript": "^5"
