--- a/express/.env.example
+++ b/express/.env.example
@@ -1,13 +1,3 @@
-POSTGRES_URL=postgresql://postgres:postgres@localhost:5432/postgres
-
-SMTP_HOST=smtp.ethereal.email
-SMTP_USER=your_ethereal_username
-SMTP_PASSWORD=ssshhhh
-SMTP_FROM=your_ethereal_email
-
-BETTER_AUTH_SECRET=supersecretkey
-BETTER_AUTH_URL=http://localhost:3002
 
 CORS_ORIGINS=http://localhost:3000
-
-CROSS_SUBDOMAIN_COOKIE_DOMAIN=localhost
+AUTH_SERVER=http://localhost:3001
