--- a/express/package.json
+++ b/express/package.json
@@ -2,26 +2,16 @@
   "name": "express",
   "type": "module",
   "scripts": {
-    "migrate": "drizzle-kit migrate",
-    "generate": "drizzle-kit generate",
-    "generate-auth": "npx @better-auth/cli generate --output ./src/lib/db/schema/auth.ts",
     "dev": "tsx watch src/dev.ts"
   },
   "dependencies": {
-    "better-auth": "^1.3.17",
     "cors": "^2.8.5",
-    "dotenv": "^17.2.2",
-    "drizzle-orm": "^0.44.5",
-    "express": "5.1.0",
-    "nodemailer": "^7.0.6",
-    "pg": "^8.16.3"
+    "express": "5.1.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.19",
     "@types/express": "5.0.0",
     "@types/node": "20.11.17",
-    "@types/pg": "^8.15.5",
-    "drizzle-kit": "^0.31.4",
     "tsx": "^4.20.5",
     "typescript": "5.8.3"
   }
