implement protected route in express

--- a/express/.env.example
+++ b/express/.env.example
@@ -1,3 +1,5 @@
 
 CORS_ORIGINS=http://localhost:3000
 AUTH_SERVER=http://localhost:3001
+AUTH_SERVER_JWKS="{json of the jwks from the auth server}"
+JWT_AUDIENCE=http://localhost:3000
