--- a/express/package.json
+++ b/express/package.json
@@ -5,8 +5,10 @@
     "dev": "tsx watch src/dev.ts"
   },
   "dependencies": {
+    "better-auth": "^1.3.23",
     "cors": "^2.8.5",
-    "express": "5.1.0"
+    "express": "5.1.0",
+    "jose": "^6.1.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.19",
