Add protected API route with JWT authentication library

--- a/nextjs/.env.example
+++ b/nextjs/.env.example
@@ -3,3 +3,5 @@
 NEXT_PUBLIC_HONO_SERVER=http://localhost:3001
 NEXT_PUBLIC_EXPRESS_SERVER=http://localhost:3002
 
+AUTH_SERVER_JWKS="{json of the jwks from the auth server}"
+
