--- a/nextjs/package.json
+++ b/nextjs/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "better-auth": "^1.3.16",
+    "jose": "^6.1.0",
     "next": "15.5.4",
     "react": "19.1.0",
     "react-dom": "19.1.0",
