--- a/express/package.json
+++ b/express/package.json
@@ -6,11 +6,13 @@
   },
   "dependencies": {
     "better-auth": "^1.3.23",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "express": "5.1.0",
     "jose": "^6.1.0"
   },
   "devDependencies": {
+    "@types/cookie-parser": "^1.4.9",
     "@types/cors": "^2.8.19",
     "@types/express": "5.0.0",
     "@types/node": "20.11.17",
