--- a/nextjs/.env.example
+++ b/nextjs/.env.example
@@ -5,3 +5,6 @@ NEXT_PUBLIC_EXPRESS_SERVER=http://localhost:3002
 
 AUTH_SERVER_JWKS="{json of the jwks from the auth server}"
 
+# Cookie max age in seconds (default: 86400 = 24 hours)
+COOKIE_MAX_AGE=86400
+
