--- a/nextjs/package.json
+++ b/nextjs/package.json
@@ -13,8 +13,7 @@
     "next": "15.5.4",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "swr": "^2.3.6",
-    "zustand": "^5.0.8"
+    "swr": "^2.3.6"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
