--- a/nextjs/.env.example
+++ b/nextjs/.env.example
@@ -3,6 +3,4 @@
 NEXT_PUBLIC_HONO_SERVER=http://localhost:3001
 NEXT_PUBLIC_EXPRESS_SERVER=http://localhost:3002
 
-# Cookie max age in seconds (default: 86400 = 24 hours)
-COOKIE_MAX_AGE=86400
-
+NEXT_PUBLIC_BURGUNDY_SERVER=http://localhost:3003
