--- a/hono/package.json
+++ b/hono/package.json
@@ -24,5 +24,8 @@
     "drizzle-kit": "^0.31.4",
     "tsx": "^4.20.5",
     "typescript": "^5.8.3"
+  },
+  "imports": {
+    "#*": "./src/*"
   }
 }
