--- a/hono/.env.example
+++ b/hono/.env.example
@@ -1,9 +1,16 @@
 POSTGRES_URL=postgresql://postgres:postgres@localhost:5432/postgres
 
-SMTP_HOST=smtp.ethereal.email
-SMTP_USER=your_ethereal_username
-SMTP_PASSWORD=ssshhhh
-SMTP_FROM=your_ethereal_email
+# SMTP_HOST=smtp.ethereal.email
+# SMTP_USER=your_ethereal_username
+# SMTP_PASSWORD=ssshhhh
+# SMTP_FROM=your_ethereal_email
+
+# mailpit https://mailpit.axllent.org/docs/configuration/smtp/
+SMTP_HOST=localhost
+SMTP_PORT=1025 # can be emptied, will use 587
+SMTP_USER=user
+SMTP_PASSWORD=password
+SMTP_FROM=juji-playaround<playaround@jujiplay.com>
 
 BETTER_AUTH_SECRET=supersecretkey
 BETTER_AUTH_URL=http://localhost:3001
