--- a/hono/package.json
+++ b/hono/package.json
@@ -5,7 +5,8 @@
     "migrate": "drizzle-kit migrate",
     "generate": "drizzle-kit generate",
     "generate-auth": "npx @better-auth/cli generate --output ./src/lib/db/schema/auth.ts",
-    "dev": "tsx watch src/dev.ts"
+    "dev": "tsx watch src/dev.ts",
+    "empty-db": "tsx scripts/empty-db.ts"
   },
   "dependencies": {
     "@hono/node-server": "^1.19.4",
