--- a/hono/package.json
+++ b/hono/package.json
@@ -6,7 +6,10 @@
     "generate": "drizzle-kit generate",
     "generate-auth": "npx @better-auth/cli generate --output ./src/lib/db/schema/auth.ts",
     "dev": "tsx watch src/dev.ts",
-    "empty-db": "tsx scripts/empty-db.ts"
+    "empty-db": "tsx scripts/empty-db.ts",
+    "generate-users": "tsx scripts/generate-users.ts",
+    "load-users": "tsx scripts/load-users.ts",
+    "remove-users": "tsx scripts/remove-users.ts"
   },
   "dependencies": {
     "@hono/node-server": "^1.19.4",
@@ -18,6 +21,7 @@
     "pg": "^8.16.3"
   },
   "devDependencies": {
+    "@faker-js/faker": "^10.0.0",
     "@types/node": "^20.11.17",
     "@types/nodemailer": "^7.0.1",
     "@types/pg": "^8.15.5",
