feat: add maintenance script for database reset and user seeding
- Create maintenance.ts script that empties DB and creates 100 users
- Combines empty-db and user generation/loading functionality
- Add maintenance npm script for easy database maintenance

--- a/hono/package.json
+++ b/hono/package.json
@@ -10,6 +10,7 @@
     "generate-users": "tsx src/scripts/generate-users.ts",
     "load-users": "tsx src/scripts/load-users.ts",
     "remove-users": "tsx src/scripts/remove-users.ts",
+    "maintenance": "tsx src/scripts/maintenance.ts",
     "new-users": "tsx src/scripts/remove-users.ts && tsx src/scripts/generate-users.ts && tsx src/scripts/load-users.ts"
   },
   "dependencies": {
